--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,68 +1,39 @@
-project:
-  name: Food Ordering System
-  year: 2025
+name: Java CI with Maven
 
-  frontend:
-    files:
-      - index.html
-      - style.css
-      - app.js
-    technologies:
-      - HTML
-      - CSS
-      - JavaScript
-    features:
-      - Dynamic menu loading
-      - Order form submission using fetch API
-    pages:
-      - Home
-      - Menu
-      - My Orders
-      - Contact
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
-  backend:
-    language: Java
-    packages:
-      - projectfood
-    core_files:
-      - FoodOrderingSystemNew.java
-      - MyFoodItem.java
-      - MyMenu.java
-      - MyOrder.java
-    dao_files:
-      - MenuDAO.java
-      - OrderDAO.java
-    test_files:
-      - TestDB.java
-      - TestOrder.java
-    features:
-      - Console-based food ordering
-      - MySQL database integration
-      - Menu and Order management
-    jdbc_config:
-      url: jdbc:mysql://localhost:3306/food_ordering_db
-      username: root
-      password: sohel@636172
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-  database:
-    name: food_ordering_db
-    tables:
-      - menu_items
-      - orders
-      - order_items
-    used_by:
-      - MenuDAO
-      - OrderDAO
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: sohel@636172
+          MYSQL_DATABASE: food_ordering_db
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
 
-  spring_boot:
-    config_file: application.properties
-    settings:
-      datasource:
-        url: jdbc:mysql://localhost:3306/food_ordering_db
-        username: root
-        password: sohel@636172
-        driver-class-name: com.mysql.cj.jdbc.Driver
-      jpa:
-        hibernate.ddl-auto: update
-        database-platform: org.hibernate.dialect.MySQLDialect
-        show-sql: true
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+
